; ModuleID = '/home/carl/AnghaBench/linux/drivers/hv/extr_ring_buffer.c_hv_ringbuffer_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hv/extr_ring_buffer.c_hv_ringbuffer_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmbus_channel = type { i32 }
%struct.vmpacket_descriptor = type { i32, i32, i32 }

@EINVAL = common dso_local global i32 0, align 4
@ENOBUFS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hv_ringbuffer_read(%struct.vmbus_channel* %0, i8* %1, i32 %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.vmbus_channel*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.vmpacket_descriptor*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.vmbus_channel* %0, %struct.vmbus_channel** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %17 = load i32, i32* %10, align 4
  %18 = icmp eq i32 %17, 0
  %19 = zext i1 %18 to i32
  %20 = call i64 @unlikely(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %6
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %7, align 4
  br label %79

25:                                               ; preds = %6
  %26 = load i32*, i32** %11, align 8
  store i32 0, i32* %26, align 4
  %27 = load i32*, i32** %12, align 8
  store i32 0, i32* %27, align 4
  %28 = load %struct.vmbus_channel*, %struct.vmbus_channel** %8, align 8
  %29 = call %struct.vmpacket_descriptor* @hv_pkt_iter_first(%struct.vmbus_channel* %28)
  store %struct.vmpacket_descriptor* %29, %struct.vmpacket_descriptor** %14, align 8
  %30 = load %struct.vmpacket_descriptor*, %struct.vmpacket_descriptor** %14, align 8
  %31 = icmp eq %struct.vmpacket_descriptor* %30, null
  br i1 %31, label %32, label %33

32:                                               ; preds = %25
  store i32 0, i32* %7, align 4
  br label %79

33:                                               ; preds = %25
  %34 = load i32, i32* %13, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %33
  br label %42

37:                                               ; preds = %33
  %38 = load %struct.vmpacket_descriptor*, %struct.vmpacket_descriptor** %14, align 8
  %39 = getelementptr inbounds %struct.vmpacket_descriptor, %struct.vmpacket_descriptor* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = shl i32 %40, 3
  br label %42

42:                                               ; preds = %37, %36
  %43 = phi i32 [ 0, %36 ], [ %41, %37 ]
  store i32 %43, i32* %16, align 4
  %44 = load %struct.vmpacket_descriptor*, %struct.vmpacket_descriptor** %14, align 8
  %45 = getelementptr inbounds %struct.vmpacket_descriptor, %struct.vmpacket_descriptor* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = shl i32 %46, 3
  %48 = load i32, i32* %16, align 4
  %49 = sub nsw i32 %47, %48
  store i32 %49, i32* %15, align 4
  %50 = load i32, i32* %15, align 4
  %51 = load i32*, i32** %11, align 8
  store i32 %50, i32* %51, align 4
  %52 = load %struct.vmpacket_descriptor*, %struct.vmpacket_descriptor** %14, align 8
  %53 = getelementptr inbounds %struct.vmpacket_descriptor, %struct.vmpacket_descriptor* %52, i32 0, i32 2
  %54 = load i32, i32* %53, align 4
  %55 = load i32*, i32** %12, align 8
  store i32 %54, i32* %55, align 4
  %56 = load i32, i32* %15, align 4
  %57 = load i32, i32* %10, align 4
  %58 = icmp sgt i32 %56, %57
  %59 = zext i1 %58 to i32
  %60 = call i64 @unlikely(i32 %59)
  %61 = icmp ne i64 %60, 0
  br i1 %61, label %62, label %65

62:                                               ; preds = %42
  %63 = load i32, i32* @ENOBUFS, align 4
  %64 = sub nsw i32 0, %63
  store i32 %64, i32* %7, align 4
  br label %79

65:                                               ; preds = %42
  %66 = load i8*, i8** %9, align 8
  %67 = load %struct.vmpacket_descriptor*, %struct.vmpacket_descriptor** %14, align 8
  %68 = bitcast %struct.vmpacket_descriptor* %67 to i8*
  %69 = load i32, i32* %16, align 4
  %70 = sext i32 %69 to i64
  %71 = getelementptr inbounds i8, i8* %68, i64 %70
  %72 = load i32, i32* %15, align 4
  %73 = call i32 @memcpy(i8* %66, i8* %71, i32 %72)
  %74 = load %struct.vmbus_channel*, %struct.vmbus_channel** %8, align 8
  %75 = load %struct.vmpacket_descriptor*, %struct.vmpacket_descriptor** %14, align 8
  %76 = call i32 @__hv_pkt_iter_next(%struct.vmbus_channel* %74, %struct.vmpacket_descriptor* %75)
  %77 = load %struct.vmbus_channel*, %struct.vmbus_channel** %8, align 8
  %78 = call i32 @hv_pkt_iter_close(%struct.vmbus_channel* %77)
  store i32 0, i32* %7, align 4
  br label %79

79:                                               ; preds = %65, %62, %32, %22
  %80 = load i32, i32* %7, align 4
  ret i32 %80
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local %struct.vmpacket_descriptor* @hv_pkt_iter_first(%struct.vmbus_channel*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @__hv_pkt_iter_next(%struct.vmbus_channel*, %struct.vmpacket_descriptor*) #1

declare dso_local i32 @hv_pkt_iter_close(%struct.vmbus_channel*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
